--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PROJETO DE VIDA</title>
+    <link href="style.css" rel="stylesheet">
+</head>
+Projeto de Vida
 
+<body>
+    <h1>PROJETO DE VIDA: METAS E PRAZOS</h1>
+    
+</body>
+</html>
