--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 Projeto de Vida
 
+<section>
 <body>
     <h1>PROJETO DE VIDA: METAS E PRAZOS</h1>
    
@@ -20,7 +21,10 @@ Projeto de Vida
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rQRoGWb5l74?si=mZhDh7g_gVAezLG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></Iframe>
     
+</section>
+
 </div>
+
     
 </body>
 </html>
