--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@ Projeto de Vida
 </section>
 
 <section>
+
     <h1>Post-IT-Virtual de Metas</h1>
+    <div>
+        <img src="<div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+         <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+           src="https://www.canva.com/design/DAGYRqCA0E0/HtBGDXL762MJPWpG6w-u_g/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+         </iframe>
+       </div>
+       <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGYRqCA0E0&#x2F;HtBGDXL762MJPWpG6w-u_g&#x2F;view?utm_content=DAGYRqCA0E0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">objetivos</a> de Roberto Blatt"/>
+    </div>
+
+
 
 
 
