--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <section>
-    Projeto de Vida
-    <h1>PROJETO DE VIDA: METAS E PRAZOS</h1>
+    <h1>Projeto de Vida</h1>
+    <h2>PROJETO DE VIDA: METAS E PRAZOS</h2>
    
     <h1>METAS</h1>
 
@@ -23,7 +23,7 @@
 
 <section>
 
-    <h1>Post-IT-Virtual de Metas</h1>
+    <h2>Post-IT-Virtual de Metas</h2>
 
 
     
